<resources>
    <string name="app_name">Food Recipes</string>
    <string name="recipe">recipe</string>
    <string name="login_app_description">Food Recipes</string>
    <string name="login_username_placeholder">Enter username</string>
    <string name="login_pin_placeholder">Enter pin</string>
    <string name="login_login">LOG IN</string>
    <string name="search">Search</string>
    <string name="save_recipe">SAVE RECIPE</string>
    <string name="ingredients">Ingredients</string>
    <string name="select_date">Select date: </string>
    <string name="date">Select Date</string>
    <string name="add_to_menu">ADD TO MENU</string>

    <string-array name="categories_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>