<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_Logo_Iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_Info_Tv"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_app_description"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Logo_Iv" />


    <EditText
        android:id="@+id/login_Username_Et"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="96dp"
        android:hint="@string/login_username_placeholder"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_Info_Tv" />

    <EditText
        android:id="@+id/login_Pin_Et"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="96dp"
        android:hint="@string/login_pin_placeholder"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Username_Et" />

    <Button
        android:id="@+id/login_LogIn_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Pin_Et" />

</androidx.constraintlayout.widget.ConstraintLayout>